# odinseye

./: .eslintrc.js  .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.php  package-lock.json  package.json  sql.sql
exercises/: ex1.json  exercises.html  index.php
src/: App.vue  exercise.rs  fs.rs  main  main.js  main.rs  rest.rs  terminal.rs
src/assets/css/: main.css  main.css.map  main.scss
src/components/: ode-box-route.vue  ode-box.vue  ode-filter-button.vue  ode-ladeleiste.vue  ode-nav-bar.vue  ode-nav-button.vue  ode-stat-circle.vue
src/components/routes/: ode-aufgabe.vue  ode-aufgaben.vue  ode-info.vue  ode-overview.vue  ode-statistic.vue
src/fs/: env.rs  mod.rs
src/router/: index.js
src/terminal/: cmd_lib.rs  mod.rs
