[package]
name = "odins_eye"
version = "0.1.0"
authors = ["Clemens Jurkowitsch<clemens.jurkowitsch@gmx.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
json = "0.12.1"