[package]
name = "odins_eye"
version = "0.2.0"
authors = ["Clemens Jurkowitsch<clemens.jurkowitsch@gmx.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
ansi_term = "0.12.1"
# serde_json = "1.0.48"
json = "0.12.1"